--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href="https://www.youtube.com/watch?v=hE8Q6nU7aw8" trailer temp 1 </a>
+    <a href="https://www.youtube.com/watch?v=P6pbLzjkihQ" erros de gravação </a>
+    <a href="https://www.youtube.com/watch?v=RvBdFwHO3nE" trailer temp 4 </a>
+        <img class="pogues" scr="outerbankss.jpg">
+        <h1>Outer Banks</h1>
+        <p class="ouro">Outer Banks é uma série de televisão norte-americana de drama criada por Josh Pate, Jonas Pate e Shannon Burke. A primeira temporada, lançada na Netflix em 15 de abril de 2020, foi elogiada por ter uma boa premissa, seu toque de drama, alternando entre suspense e surpresa. As gravações de Outer Banks acontecem no Estado da Carolina do Sul (EUA). Existe uma Outer Banks real, que é um conjunto de ilhas, mas está localizada na Carolina do Norte. Em 24 de julho de 2020, a série foi renovada para uma segunda temporada, lançada em 30 de julho de 2021. A Netflix renovou Outer Banks para sua 3 temporada no dia 7 de dezembro de 2021.</p>
+        <p>Outer Banks se passa em uma cidade costeira ao longo de Outer Banks da Carolina do Norte, onde há uma divisão social gritante entre residentes sazonais ricos e moradores da classe trabalhadora (que têm os apelidos de "Kooks" e "Pogues", respectivamente). O show segue um grupo de pessoas Pogue que moram no The Cut e estão determinados a descobrir o que aconteceu com o pai desaparecido do líder do grupo, John B. Ao longo do caminho, eles descobrem um tesouro lendário que está ligado ao pai de John B. Perseguidos pela lei e pelos seus inimigos Kooks do Figure Eight, os Pogues buscam superar obstáculos como <strong>amor, luta, amizade e dinheiro.</strong></p>
+        <h2>Primeira Temporada</h2>
+        <p>John B, Kiara, Pope e JJ são um grupo de amigos que vivem na Ilha Outer Banks. John B é chamado ao escritório da escola porque seu pai está desaparecido há 9 meses e seu tio está listado como seu zelador, mas vive fora do estado nos últimos três meses.Kiara encontra um envelope no túmulo de Redfield contendo um mapa mostrando a localização do naufrágio do Mercador Real . Também no envelope está um gravador com o pai de John B falando. O pai de John B diz para ele terminar o que começou. Eles descobrem que existem 400 milhões de dólares no Merchant, então eles apresentam um plano para obtê-lo. Ao final da temporada, Sarah Cameron e Jonh B acabam desaparecendo no mar. </p>
+        <h3>Segunda Temporada</h3>
+        <p>(Chase Stokes) e Sarah (Madelyn Cline) viajam rumo às Bahamas, a fim de procurar o ouro roubado pelo pai da jovem. Logo, os Pogues começam uma nova caça ao tesouro, ainda mais perigosa que a primeira, com consequências muito mais graves que mudarão suas vidas para sempre.</p>
+        <h4>Terceira Temporada</h4>
+        <p>Os Pogues fazem de tudo para salvá-lo, mas infelizmente, Big John acaba morrendo. Antes disso, ele finalmente se reconcilia com o filho John B. Após o momento trágico, a trama da 3ª temporada de Outer Banks dá um salto temporal de 18 meses. Os Pogues são homenageados como heróis locais e como grandes aventureiros.</p>
+        <h5>Quarta Temporada</h5>
+        <p>A quarta temporada acabou de sair, e está disponível na Netflix.</p>
+        <ul>Elenco</ul>
+        <li>Madelyn Clyne- Sarah Cameron</li>
+        <li>Chase Stokes- Jonh B</li>
+        <li>Rudy Pankow- JJ</li>
+        <li>Madison Bailey- Kiara</li>
+        <li>Jonathan Daviss- Pope</li>
+        <li>Drew Starkey- Rafe Cameron</li>
 </body>
 </html>
