--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
     <a href="https://www.youtube.com/watch?v=hE8Q6nU7aw8" trailer temp 1 </a>
     <a href="https://www.youtube.com/watch?v=P6pbLzjkihQ" erros de gravação </a>
     <a href="https://www.youtube.com/watch?v=RvBdFwHO3nE" trailer temp 4 </a>
+    </header>
         <img class="pogues" scr="outerbankss.jpg">
         <h1>Outer Banks</h1>
         <p class="ouro">Outer Banks é uma série de televisão norte-americana de drama criada por Josh Pate, Jonas Pate e Shannon Burke. A primeira temporada, lançada na Netflix em 15 de abril de 2020, foi elogiada por ter uma boa premissa, seu toque de drama, alternando entre suspense e surpresa. As gravações de Outer Banks acontecem no Estado da Carolina do Sul (EUA). Existe uma Outer Banks real, que é um conjunto de ilhas, mas está localizada na Carolina do Norte. Em 24 de julho de 2020, a série foi renovada para uma segunda temporada, lançada em 30 de julho de 2021. A Netflix renovou Outer Banks para sua 3 temporada no dia 7 de dezembro de 2021.</p>
